Removed class to type.newInstance() which are deprecated in Java 9.