@@ -19,7 +19,7 @@ public class MethodDelegationArgumentTest extends AbstractImplementationTest {
     @Test
     public void testArgument() throws Exception {
         DynamicType.Loaded<Foo> loaded = implement(Foo.class, MethodDelegation.to(Bar.class));
-        Foo instance = loaded.getLoaded().newInstance();
+        Foo instance = loaded.getLoaded().getConstructor().newInstance();
         assertThat(instance.foo(FOO, BAR), is((Object) (QUX + FOO + BAR)));
     }
 
@@ -32,7 +32,9 @@ public class MethodDelegationArgumentTest extends AbstractImplementationTest {
                 .make()
                 .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER)
                 .getLoaded()
-                .newInstance();
+                .getConstructor()
+                .newInstance()
+                .foo();
     }
 
     public static class Foo {
