@@ -16,7 +16,7 @@ public class MethodDelegationBindingPriorityTest extends AbstractImplementationT
     @Test
     public void testBindingPriority() throws Exception {
         DynamicType.Loaded<Foo> loaded = implement(Foo.class, MethodDelegation.to(Bar.class));
-        Foo instance = loaded.getLoaded().newInstance();
+        Foo instance = loaded.getLoaded().getConstructor().newInstance();
         assertThat(instance.foo(), is(FOO));
     }
 
